--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Eric\'s Weather</string>
+    <string name="label_today">Today in</string>
+    <string name="max_min">max %1$s / min %2$s</string>
+    <string name="current">Current %1$s</string>
 </resources>
