--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="label_today">Today in</string>
     <string name="max_min">max %1$s / min %2$s</string>
     <string name="current">Current %1$s</string>
+    <string name="search_hint">Enter city name</string>
 </resources>
