Done forecast section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">Eric\'s Weather</string>
     <string name="label_today">Today in</string>
-    <string name="max_min">max %1$s / min %2$s</string>
+    <string name="max_min_long">max %1$s / min %2$s</string>
+    <string name="max_min">%1$s/%2$s</string>
     <string name="current">Current %1$s</string>
     <string name="search_hint">Enter city name</string>
+    <string name="next_three_days">Next 3 days</string>
 </resources>
