--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="current">Current %1$s</string>
     <string name="search_hint">Enter city name</string>
     <string name="next_three_days">Next 3 days</string>
+    <string name="error_generic">Something went wrong</string>
 </resources>
