--- a/mylibrary/src/main/res/values/strings.xml
+++ b/mylibrary/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="error_generic">Something went wrong</string>
+    <string name="news_highlights">News Highlights</string>
+    <string name="source_by">By %s</string>
 </resources>
