--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="search_hint">Enter city name</string>
     <string name="next_three_days">Next 3 days</string>
     <string name="error_generic">Something went wrong</string>
+    <string name="empty_state">Please tap the search icon to start</string>
 </resources>
